--- a/app/views/layouts/ember.html.haml
+++ b/app/views/layouts/ember.html.haml
@@ -3,10 +3,7 @@
   %head
     %title Pinboard
     = stylesheet_link_tag "application"
+    = javascript_include_tag "application"
     = csrf_meta_tags
 
   %body
-    - if flash.any?
-      - flash.each do |flash_type, message|
-        .flash{ class: flash_type }= message
-    = yield
