--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,9 +1,14 @@
-@import 'whitespace-reset'
+@import 'whitespace-reset', 'mixins', 'jquery-ui'
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700)
 
-body
+html, body
   font-family: 'Roboto'
-  font-size: '15px'
+  font-size: 14px
+  height: 100%
+
+#ember-app, .application-view
+  height: 100%
+  background: #F3F3F3
 
 header
   background: #2B2D33
@@ -31,6 +36,26 @@ section#boards_index
         font-family: 'Roboto'
         font-weight: 300
         font-size: 22px
+
+section#board
+  height: 100%
+  .card_container
+    display: inline-block
+    position: absolute
+    .card
+      background: white
+      display: inline-block
+      padding: 10px 25px
+      width: 240px
+      height: 115px
+      margin: 4px
+      +cursor-grab
+      textarea
+        width: 100%
+        height: 100%
+        border: none
+        font-size: 14px
+        font-family: Roboto
 
 section#home
   width: 300px
