Test user sign in / sign out

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -12,10 +12,23 @@ html, body
 
 header
   background: #2B2D33
-  height: 43px
+  height: 42px
   padding: 0 1%
   #logo
     padding: 8px 0 0 0
+  .right
+    li
+      display: inline-block
+      list-item: none
+      color: #999
+      padding-left: 25px
+    float: right
+    padding: 10px 6px 0 0
+    a, a:hover, a:visited, a:active
+      color: #999
+      text-decoration: none
+      &:hover
+        text-decoration: underline
 
 
 section#boards_index
