Preserve newlines in card text output

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -73,6 +73,7 @@ section#board
       height: 105px
       margin: 3px
       border: 1px solid #ddd
+      white-space: pre-wrap
       +cursor-grab
       textarea
         width: 100%
