Scroll card text if it overflows

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -74,6 +74,7 @@ section#board
       margin: 3px
       border: 1px solid #ddd
       white-space: pre-wrap
+      overflow-y: auto
       +cursor-grab
       textarea
         width: 100%
