Scroll board if card is off screen

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -21,6 +21,8 @@ header
   height: 42px
   padding: 0 1%
   color: #999
+  position: fixed
+  width: 100%
   #logo
     padding: 8px 0 0 0
   .board_tools
@@ -38,6 +40,7 @@ header
   .right
     float: right
     padding: 10px 6px 0 0
+    margin-right: 30px
     li
       display: inline-block
       list-style-type: none
@@ -58,6 +61,9 @@ header
 section#board
   height: 100%
   margin-left: 11px
+  overflow-x: auto
+  position: relative
+  padding: 46px 0 0 0
   .card_container
     display: inline-block
     position: absolute
