--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -63,7 +63,8 @@ section#board
   margin-left: 11px
   overflow-x: auto
   position: relative
-  padding: 46px 0 0 0
+  padding: 56px 0 0 0
+  margin-bottom: -56px
   .card_container
     display: inline-block
     position: absolute
@@ -83,8 +84,8 @@ section#board
       overflow-y: auto
       +cursor-grab
       textarea
-        width: 100%
-        height: 100%
+        width: 95%
+        height: 93%
         border: none
         font-size: $font-size
         font-family: $font-family
