Use left padding instead of margin for board

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -78,10 +78,9 @@ header
 
 section#board
   height: 100%
-  margin-left: 11px
   overflow-x: auto
   position: relative
-  padding: 56px 0 0 0
+  padding: 56px 0 0 11px
   margin-bottom: -56px
   .image
     position: absolute
