Use header-spacer to pad fixed width header

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -18,9 +18,11 @@ html, body
 li
   list-style-type: none
 
+.header-spacer, header
+  height: 42px
+
 header
   background: #2B2D33
-  height: 42px
   padding: 0 1%
   color: #999
   position: fixed
@@ -80,7 +82,7 @@ section#board
   height: 100%
   overflow-x: auto
   position: relative
-  padding: 56px 0 0 11px
+  padding: 0 0 0 11px
   margin-bottom: -56px
   .image
     position: absolute
